// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpsellBanner UpsellBannerBody variant render matches screenshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#f3f5f9",
      "borderRadius": 8,
      "flexDirection": "row",
      "gap": 8,
      "justifyContent": "space-between",
      "paddingHorizontal": 16,
      "paddingVertical": 12,
    }
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist Bold",
          "fontSize": 18,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      you could earn
    </Text>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#457a39",
          "fontFamily": "Geist Bold",
          "fontSize": 32,
          "letterSpacing": 0,
          "lineHeight": 40,
        }
      }
    >
      $454
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#686e7d",
            "fontFamily": "Geist Regular",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        per year on your tokens
      </Text>
      <TouchableOpacity
        onPress={[MockFunction]}
      >
        <SvgMock
          color="#686e7d"
          fill="currentColor"
          height={16}
          name="Info"
          style={
            {
              "height": 16,
              "width": 16,
            }
          }
          width={16}
        />
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "justifyContent": "center",
      }
    }
  >
    <TouchableOpacity
      accessibilityRole="button"
      accessible={true}
      activeOpacity={1}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#3c4d9d0f",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 40,
          "justifyContent": "center",
          "overflow": "hidden",
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist Medium",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Earn 4.5%
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`UpsellBanner UpsellBannerHeader variant render matches screenshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#f3f5f9",
      "borderRadius": 8,
      "gap": 8,
      "paddingHorizontal": 16,
      "paddingVertical": 24,
    }
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist Bold",
        "fontSize": 18,
        "letterSpacing": 0,
        "lineHeight": 24,
      }
    }
  >
    you could earn
  </Text>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#457a39",
        "fontFamily": "Geist Bold",
        "fontSize": 32,
        "letterSpacing": 0,
        "lineHeight": 40,
      }
    }
  >
    $454
  </Text>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#686e7d",
        "fontFamily": "Geist Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
      }
    }
  >
    per year on your tokens
  </Text>
  <TouchableOpacity
    accessibilityRole="button"
    accessible={true}
    activeOpacity={1}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    style={
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#3c4d9d0f",
        "borderColor": "transparent",
        "borderRadius": 12,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 40,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 16,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist Medium",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Earn 4.5%
    </Text>
  </TouchableOpacity>
</View>
`;
